infrastructure/network/traefik/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik-system
  labels:
    name: traefik-system
