infrastructure/network/traefik/ds.yaml
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: traefik-ingress-controller
  namespace: traefik-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
  selector:
    matchLabels:
        k8s-app: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9104"
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik:v2.2.1
        name: traefik-ingress-lb
        ports:
        - name: web
          containerPort: 80
        - name: websecure
          containerPort: 443
        - name: admin
          containerPort: 8100
        - name: vault
          containerPort: 8200
        - name: minio
          containerPort: 9000
        securityContext:
          capabilities:
            drop:
            - ALL
            add:
            - NET_BIND_SERVICE
        args:
        - --api
        - --api.dashboard=true
        - --accesslog
        - --log.level=DEBUG
        - --ping=true
        - --global.checknewversion=true
        - --entryPoints.websecure.forwardedHeaders.trustedIPs=10.10.1.50,10.10.1.51,10.10.1.52,10.0.0.0/8,192.168.0.0/16,172.16.0.0/16
        - --entryPoints.web.http.redirections.entryPoint.to=https
        - --entryPoints.web.http.redirections.entryPoint.scheme=https
        - --entryPoints.traefik.address=:8100
        - --entryPoints.web.address=:80
        - --entryPoints.websecure.address=:443
        - --entryPoints.minio.address=:9000
        - --entryPoints.vault.address=:8200
        - --entryPoints.metrics.address=:9104
        - --metrics.prometheus=true
        - --metrics.prometheus.entryPoint=metrics
        - --providers.kubernetescrd
        - --providers.kubernetesingress
        - --serverstransport.insecureskipverify
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /ping
            port: 8100
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress-service
  namespace: traefik-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - protocol: TCP
      port: 80
      name: web
    - protocol: TCP
      port: 443
      name: websecure
    - protocol: TCP
      port: 8100
      name: admin
    - protocol: TCP
      port: 8200
      name: vault
    - protocol: TCP
      port: 9000
      name: minio   
  type: LoadBalancer
