infrastructure/network/traefik/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress-service
  namespace: traefik-system
  labels:
    traefik2: "true"
  annotations:
    kubernetes.io/ingress.class: cert
    #traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/acme-dns01-provider: route53
    cert-manager.io/acme-challenge-type: dns01
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: traefik.decort.tech
    http:
      paths:
      - path: /cert-placeholder
        backend:
          serviceName: traefik-ingress-service
          servicePort: 8100
  tls:
  - hosts:
    - traefik.decort.tech
    secretName: traefik-cert   
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingress-service
  namespace: traefik-system
spec:
  entryPoints:
    - web
    - websecure
    - traefik
  routes:
    - match: Host(`traefik.decort.tech`)
      kind: Rule
      services:
      - name: api@internal
        kind: TraefikService
      middlewares:
        - name: traefik-security
        - name: traefik-auth
        - name: traefik-ipwhitelist
  tls:
    secretName: traefik-cert
